[project]
name = "axklib-documentation"
version = "0.1.0"
description = "Documentation toolchain for the native axklib SDK and CLI."
requires-python = ">=3.13"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.0",
  "mkdocs-mermaid-to-svg>=1.3.0",
  "pymdown-extensions>=11.0.1",
]

[tool.uv]
package = false
