[project]
name = "axklib-python-oracle"
version = "0.0.0"
description = "Frozen Python compatibility oracle for the native axklib implementation."
readme = "README.md"
license = "MPL-2.0"
authors = [{ name = "tphzz" }]
keywords = ["compatibility", "oracle", "testing"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "pycdlib>=1.14.0",
    "pyfatfs>=1.1.0",
    # pyfatfs imports pkg_resources, which setuptools 81+ no longer provides.
    "setuptools<81",
    "soundfile>=0.14.0",
    "soxr>=1.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../.."]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.31.0",
    "pymdown-extensions>=11.0.1",
]

[build-system]
# Keep the isolated build backend on a pkg_resources-providing setuptools release.
requires = ["setuptools>=80,<81"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axklib*"]
