[package]
name = "axkdeck"
version = "0.0.0"
description = "A Yamaha A-series disk and sample workspace"
authors = ["axkdeck contributors"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[lib]
name = "axkdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "=3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-log = "2"
url = "2.5.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
